data/derived/sp14/progs/unify/prog2909.ml.out
Characters 78-80:
  | Sine(x) -> sin(pi*x)
                   ^^
Error: This expression has type float but an expression was expected of type
         int
